# open-terminal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  core-requirements.txt  docker-compose.yml  entrypoint.sh  pyproject.toml  test_desktop.sh
.github/workflows/: docker.yml
docs/: CUTOVER_2026-05-10.md  LOCAL_BASELINE.md  OTX_ROUTER_SETUP.md  SAFETY_BOUNDARIES.md
docs/examples/: targets.json.example
open_terminal/: cli.py  env.py  main.py  mcp_server.py  runner.py  user_isolation.py
open_terminal/utils/: apply_patch.py  desktop.py  fs.py  runner.py  user_isolation.py
scripts/: codex-gemma  guarded-run.sh  install-codex-gemma-cli.sh  install-open-terminal-cli.sh  install-user-service.sh  logs.sh  midnight-dust-watcher  midnight-probe-loop  model_baseline_cases.json  model_baseline_suite.py  open-terminal  otx  otx-benchmark-crosshost  setup-local.sh  start.sh  status.sh  stop.sh  verify-decoupled-stack.sh
scripts/output/model-baseline/: baseline.gemma-only.json  baseline.gemma-only.md  baseline.harness.gemma.10cases.cross-host.md  baseline.harness.gemma.10cases.json  baseline.harness.gemma.10cases.md  baseline.harness.gemma.10cases.nuc.json  baseline.harness.gemma.10cases.nuc.md  baseline.harness.gemma.10cases.z490.json  baseline.harness.gemma.10cases.z490.md  baseline.harness.gemma.json  baseline.harness.gemma.md  (+4 more)
src/security/: CommandGuard.py
systemd/: midnight-dust-watcher.service  open-terminal-verify.service  open-terminal-verify.timer  open-terminal.service
tests/: test_env.py  test_runner.py  test_tool_contract.py
