[project]
name = "open-terminal"
version = "0.1.5"
description = "A barebones terminal interaction API"
readme = "README.md"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "click>=8.1.0",
]

[project.scripts]
open-terminal = "open_terminal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_terminal"]
